# Project-Studentlists

./: CMakeLists.txt
include/: StudentGroup.h
src/: StudentGroup.cpp
